--- a/LawOfficeAthena/OfficeAddinUI/OfficeAddinUI.csproj
+++ b/LawOfficeAthena/OfficeAddinUI/OfficeAddinUI.csproj
@@ -157,9 +157,18 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="OfficeAddinCustomTaskPane.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="OfficeAddinCustomTaskPane.Designer.cs">
+      <DependentUpon>OfficeAddinCustomTaskPane.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <EmbeddedResource Include="OfficeAddinCustomTaskPane.resx">
+      <DependentUpon>OfficeAddinCustomTaskPane.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
