--- a/LawOfficeAthena/OfficeAddinUI/OfficeAddinUI.csproj
+++ b/LawOfficeAthena/OfficeAddinUI/OfficeAddinUI.csproj
@@ -157,6 +157,7 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="DocData.cs" />
     <Compile Include="OfficeAddinCustomTaskPane.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -195,14 +196,14 @@
     <Compile Include="Ribbon.Designer.cs">
       <DependentUpon>Ribbon.cs</DependentUpon>
     </Compile>
-    <Compile Include="ThisAddIn.cs">
+    <Compile Include="DocAuto.cs">
       <SubType>Code</SubType>
     </Compile>
-    <None Include="ThisAddIn.Designer.xml">
-      <DependentUpon>ThisAddIn.cs</DependentUpon>
+    <None Include="DocAuto.Designer.xml">
+      <DependentUpon>DocAuto.cs</DependentUpon>
     </None>
-    <Compile Include="ThisAddIn.Designer.cs">
-      <DependentUpon>ThisAddIn.Designer.xml</DependentUpon>
+    <Compile Include="DocAuto.Designer.cs">
+      <DependentUpon>DocAuto.Designer.xml</DependentUpon>
     </Compile>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
@@ -229,7 +230,7 @@
       <FlavorProperties GUID="{BAA0C2D2-18E2-41B9-852F-F413020CAA33}">
         <ProjectProperties HostName="Word" HostPackage="{29A7B9D7-A7F1-4328-8EF0-6B2D1A56B2C1}" OfficeVersion="15.0" VstxVersion="4.0" ApplicationType="Word" Language="cs" TemplatesPath="" DebugInfoExeName="#Software\Microsoft\Office\15.0\Word\InstallRoot\Path#WINWORD.EXE" DebugInfoCommandLine="/x" AddItemTemplatesGuid="{51063C3A-E220-4D12-8922-BDA915ACD783}" />
         <Host Name="Word" GeneratedCodeNamespace="OfficeAddinUI" IconIndex="0">
-          <HostItem Name="ThisAddIn" Code="ThisAddIn.cs" CanonicalName="AddIn" CanActivate="false" IconIndex="1" Blueprint="ThisAddIn.Designer.xml" GeneratedCode="ThisAddIn.Designer.cs" />
+          <HostItem Name="ThisAddIn" Code="DocAuto.cs" CanonicalName="AddIn" CanActivate="false" IconIndex="1" Blueprint="DocAuto.Designer.xml" GeneratedCode="DocAuto.Designer.cs" />
         </Host>
       </FlavorProperties>
     </VisualStudio>
